# capstone-assingment

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
add_meals/: apps.py  models.py  serializers.py  views.py
add_meals/migrations/: 0001_initial.py
base/: forms.py  models.py  serializers.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_fooditem_alter_userprofile_user_and_more.py  0002_remove_meal_user_delete_exercise_delete_meal.py  0003_remove_fooditem_food_name_fooditem_calories_per_100g_and_more.py  0004_alter_mealitem_food_alter_mealitem_meal.py  0005_exercise.py
base/static/base/css/: base1_styles.css  blog_styles.css  meals_styles.css  styles.css
base/templates/base/: base.html  blog-delete.html  blog-detail.html  blog-list.html  blog-post.html  dashboard.html  food_item.html  home.html  user-profile.html
capstone/: settings.py  urls.py
exercise/: forms.py  serializers.py  urls.py  views.py
exercise/migrations/: 0001_initial.py
exercise/templates/exercise/: log_exercise.html
log_exercises/: apps.py  models.py  urls.py  views.py
log_exercises/migrations/: 0001_initial.py
meals/: forms.py  models.py  serializers.py  urls.py  views.py
meals/migrations/: 0001_initial.py  0002_food_remove_meal_calories_per_100g_alter_meal_time_and_more.py  0003_rename_quantity_meal_quantity_in_grams.py
meals/templates/meals/: add_meal.html  dashboard.html  meal-list.html
staticfiles/base/css/: styles.css
user_accounts/: apps.py  models.py  serializers.py  urls.py  views.py
user_accounts/migrations/: 0001_initial.py
(+14 files in other folders)
